--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "mongoose": "^5.11.15",
-    "next": "10.0.6",
+    "next": "^11.1.0",
     "postcss": "^8.2.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^2.0.2"
   }
 }
