--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
     "mongoose": "^5.11.15",
     "next": "^11.1.0",
     "postcss": "^8.2.4",
