--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "cookie": "^0.4.1",
     "mongoose": "^5.11.15",
     "next": "^11.1.0",
     "postcss": "^8.2.4",
