--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 MONGO_URI = "mongo url"
 DISCORD_CLIENT_ID = "bot id"
-URL = "http://localhost:3000" or "https://blog.snowflakedev.xyz"
-ORIGIN = "localhost" or "blog.snowflakedev.xyz"
+URL = "http://localhost:3000" or "https://blogs.snowflakedev.org"
+ORIGIN = "localhost" or "blogs.snowflakedev.org"
