--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write **/*.{js,jsx}"
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
@@ -21,6 +22,7 @@
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^3.8.0"
+    "@netlify/plugin-nextjs": "^3.8.0",
+    "prettier": "^2.3.2"
   }
 }
