--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "common-tags": "^1.8.0",
     "cookie": "^0.4.1",
+    "highlight.js": "^11.2.0",
+    "marked": "^3.0.2",
     "mongoose": "^5.11.15",
     "next": "^11.1.0",
     "postcss": "^8.2.4",
