feat: get add member's blogs api

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ MONGO_URI = "mongo url"
 DISCORD_CLIENT_ID = "bot id"
 URL = "http://localhost:3000" or "https://blogs.snowflakedev.org"
 ORIGIN = "localhost" or "blogs.snowflakedev.org"
+HOST = "localhost:3000" or "blogs.snowflakedev.org"
